--- a/projects.html
+++ b/projects.html
@@ -23,10 +23,7 @@
       padding: 25px;
       color: aliceblue;
     }
-    .preview {
-    
-
-    }
+  
   .carousel-inner img {
       width: 100%; /* Set width to 100% */
       margin: auto;
@@ -122,7 +119,23 @@
         </div>
       </div>
     </div>
-  </div><br><br>
+  </div>
+  <div class="col-sm-4"> 
+    <div class="panel panel-primary">
+      <div class="panel-heading">Mercurial Velocity Series.</div>
+      <div class="panel-body"><img src="Images/wow.png" class="img-responsive" style="width:100%" alt="Image"></div>
+      <div class="panel-footer">Our best model EVER.</div>
+      <a href="cars/velocity.html"><button btn-primary style="margin: 15px;"> Download</button></a>
+    </div>
+  </div>
+</div>
+  <br><br>
+  <br><br>  <br><br>  <br><br>  <br><br>  <br><br>  <br><br>
+  <br><br>  <br><br>  <br><br>  <br><br>
+
+  
+  
+  
   
   <footer class="container-fluid text-center">
     <p>Online Store Copyright</p>  
